@@ -1,5 +1,7 @@
 2006-10-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
 
+	* vm/sqUnixCharConv.c: Solaris uses "iso5" external charset.
+
 	* vm-sound-ALSA/sqUnixSoundALSA.c: Implement mixer functions.
 
 	* vm/sqUnixMain.c: -nomixer is no longer deprecated.
